--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 applicationDefaultJvmArgs = ['-Dlog4j.skipJansi=false']
 
 apply plugin :"java"
+apply plugin: 'java-library'
 ext {
     javaMainClass = "org.abstruck.werewolf.Werewolf"
 }
@@ -28,6 +29,9 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.16.0'
 
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
+    implementation "com.code-disaster.steamworks4j:steamworks4j:1.9.0"
+    implementation "com.code-disaster.steamworks4j:steamworks4j-server:1.9.0"
 }
 
 test {
